# octoget

./: Cargo.toml  README.md  README.zh.md  build.rs  config.toml.sample
proto/: octoget.proto
src/: config.rs  main.rs  pb.rs  utils.rs  worker.rs
src/api/: middleware.rs  mod.rs  peers.rs  sys.rs  tasks.rs
src/coordinator/: grpc_ops.rs  mod.rs  models.rs  peer_ops.rs  state_ops.rs  task_ops.rs  worker.rs
src/frontend/: app.js  i18n.js  index.html  mod.rs  modals.html  network.html  style.css  task_list.html
