# Cargo.toml
[package]
name = "octoget"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["stream", "json", "rustls-tls", "http3"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
bytes = "1.5"
futures-util = "0.3"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
tokio-stream = "0.1"
http-body-util = "0.1"
thiserror = "1.0"
tokio-util = "0.7"
toml = "0.8"
igd = "0.12"
local-ip-address = "0.5"
dirs = "5.0"
open = "5.3"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1